<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eggejakten</string>
    <string name="action_settings">Settings</string>
    <string name="button">Åpne</string>
    <string name="textfield"></string>
    <string name="secondPassword">kylling</string>
    <string name="thirdPassword">gul</string>
    <string name="fourthPassword">marsipan</string>
    <string name="fifthPassword">kvikk lunsj</string>
    <string name="sixthPassword">appelsin</string>
    <string name="seventhPassword">egg</string>
    <string name="hackPassword">!!</string>
    <string name="ic_launcher">Launcher</string>
    <string name="start_button">Start jakten!</string>
    <string name="target_latitude">2</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="light">Light</string>
    <string name="third_text">Ligger mykt som et lam.</string>
    <string name="button_play">Spill Lyd</string>
    <string name="sixth_text">Skynd dere før ledetråden brenner opp!</string>
    <string name="seventh_text">For å komme videre kan man verken ha høydeskrekk eller pollenallergi.</string>
    <string name="texthintfield">Kodeord</string>

</resources>