<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SecondView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/ic_launcher"
    android:orientation="vertical"
    tools:context="io.flakstad.eggejakten.SecondActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center_horizontal|top"
        android:text="@string/third_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texthintfield"
        android:inputType="text"
        android:text="@string/textfield" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="nextActivity"
        android:text="@string/button" />

</LinearLayout>