<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SensorView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/ic_launcher"
    android:orientation="vertical"
    tools:context="io.flakstad.eggejakten.SensorActivity" >

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>